--- a/lightbox-assignment.html
+++ b/lightbox-assignment.html
@@ -7,32 +7,20 @@
 	<link href="https://fonts.googleapis.com/css?family=PT%7cSans" rel="stylesheet">
 	<title>Lightbox Examples</title>
 </head>
-  <section>
-    <h3>A collection of Landscape Images from my Travels</h3>
 <body>
-	<div>
-		      <a class="example-image-link" href="http://lokeshdhakar.com/projects/lightbox2/images/image-1.jpg" data-lightbox="example-1"><img class="example-image" src="http://lokeshdhakar.com/projects/lightbox2/images/thumb-1.jpg" alt="image-1" /></a>
-		<a class="gallery" href="images/IMG_2345.jpg" data-lightbox="San Francisco Bay & The Famous Golden Gate Bridge" data-title="Needlepoint"><img class="thumbnail" src="/images/thumbnail/H_IMG_2345.jpg" alt="image-1" />San Francisco Bay and the famous Golden Gate Bridge
+<h1> A collection of Landscape Images from my Travels</h1>
+	<div<!--  class="gallery"> -->
+		<a href="/images/H_NEEDLE.jpg" data-lightbox="A sample of needlepoint" data-title="Needlepoint Sample"><img src="/images/thumbs/H_NEEDLE_SM.jpg" alt="Needlepoint sample">A Needlepoint sample.</a>
+		<a href="/images/H_BAR.JPG" data-lightbox="A Singapore Sling at the Longbar, Raffles Hotel, Singapore" data-title="A Singapore Sling at the Longbar">A Singapore Sling at the Longbar</a>
 
-		</a>
-		<a href="images/IMG_3027.jpg" data-lightbox="A Singapore Sling at the Longbar, Raffles Hotel, Singapore" data-title="A Singapore Sling at the Longbar">A Singapore Sling at the Longbar</a>
-		<a href="images/IMG_0250.jpg" data-lightbox="needlepoint image" data-title="Needlepoint">Needlepoint Example</a>
-		<a href="images/IMG_0250.jpg" data-lightbox="needlepoint image" data-title="Needlepoint">Needlepoint Example</a>
-		<a href="images/IMG_0250.jpg" data-lightbox="needlepoint image" data-title="Needlepoint">Needlepoint Example</a>
-		<a href="images/IMG_0250.jpg" data-lightbox="needlepoint image" data-title="Needlepoint">Needlepoint Example</a>
+</div>
 
-		<a href="images/kids.jpg" ><img src="images/kids.jpg" alt="My Three kids"></a>
+		<div class="gallery">
+    <h1>A collection of Portrait Images from my Travels</h1>
 
-	
-    <h3>A collection of Portrait Images from my Travels</h3>
+    	<a class="gallery" href="/images/W_SFBAY.jpg" data-lightbox="San Francisco Bay & The Famous Golden Gate Bridge" data-title="Needlepoint"><iMG src="/images/thumbs/W_SFBAY.jpg_SM" alt="SF Bay and Golden Gate Bridge">San Francisco Bay and the famous Golden Gate Bridge</a>
 
-    	<a href="images/IMG_4499.jpg" data-lightbox="needlepoint image" data-title="Needlepoint">Needlepoint Example</a>
-		<a href="images/IMG_0250.jpg" data-lightbox="needlepoint image" data-title="Needlepoint">Needlepoint Example</a>
-		<a href="images/IMG_0250.jpg" data-lightbox="needlepoint image" data-title="Needlepoint">Needlepoint Example</a>
-		<a href="images/IMG_0250.jpg" data-lightbox="needlepoint image" data-title="Needlepoint">Needlepoint Example</a>
-		<a href="images/IMG_0250.jpg" data-lightbox="needlepoint image" data-title="Needlepoint">Needlepoint Example</a>
-		<a href="images/IMG_0250.jpg" data-lightbox="needlepoint image" data-title="Needlepoint">Needlepoint Example</a>
-	</div></section>
+	</div>
 <script src="/css/lightbox-plus-jquery.js"></script>
 </body>
 </html>
