--- a/lightbox-assignment.html
+++ b/lightbox-assignment.html
@@ -28,7 +28,7 @@
 		<a class="mix green" href="images/H_BAR.JPG" data-lightbox="gallery" data-title="A Singapore Sling at the Raffles Hotel, Singapore">
 			<img class="mix green" src="images/thumbs/H_BAR_SM.jpg" alt="A Singapore Sling drink">
 			</a>
-    	<a class= "mix green" href="images/W_SFBAY.jpg" data-lightbox="gallery data-title="San Francisco Bay and the incomparable Golden Gate Bridge"> 
+    	<a class= "mix green" href="images/W_SFBAY.jpg" data-lightbox="gallery" data-title="San Francisco Bay and the incomparable Golden Gate Bridge"> 
     		<img class="mix green" src="images/thumbs/W_SFBAY_SM.jpg" alt="SF BAY & Golden Gate Brige">
     		</a>
     	<a class= "mix blue orange" href="images/W_CAR.jpg"  data-lightbox="gallery" data-title="Chevy Corvair, A Classic Car"> 
