--- a/lightbox-assignment.html
+++ b/lightbox-assignment.html
@@ -10,8 +10,7 @@
 	<title>Lightbox Examples</title>
 </head>
 <body>
-<h1> A collection of Images from my Travels</h1><br>
-<section role="main"> 
+<section role="main"> <h1> A collection of Images from my Travels</h1><br>
     <div class="btn-group">
       <button type="button" class="control mixitup-control-active" data-filter="all">ALL</button>
       <button type="button" class="control" data-toggle=".red">ART</button>
