--- a/lightbox-assignment.html
+++ b/lightbox-assignment.html
@@ -20,7 +20,7 @@
     </div>
 
 <br>
-	<div class="gallery">
+	<div class="gallery container">
 		<a class= "mix red" href="images/H_NEEDLE.jpg" data-lightbox="gallery" data-title="Needlepoint on the train">
 			<img class= "mix red" src="images/thumbs/H_NEEDLE_SM.jpg" alt="example of needlepoint">
 			</a>
