--- a/lightbox-assignment.html
+++ b/lightbox-assignment.html
@@ -54,7 +54,7 @@
 <script src="js/lightbox-plus-jquery.min.js"></script>
 <script src="js/mixitup.min.js"></script>
   <script>
-    var containerEl = document.querySelector('.gallery');
+    var containerEl = document.querySelector('.container');
 
     var mixer = mixitup(containerEl);
   </script>
