--- a/lightbox-assignment.html
+++ b/lightbox-assignment.html
@@ -24,7 +24,7 @@
 		<a class= "mix red" href="images/H_NEEDLE.jpg" data-lightbox="gallery" data-title="Needlepoint on the train">
 			<img class= "mix red" src="images/thumbs/H_NEEDLE_SM.jpg" alt="example of needlepoint">
 			</a>
-		<a class="mix green" href="images/H_BAR.JPG" data-lightbox="gallery" data-title="A Singapore Sling at the Raffles Hotel, Singapore">
+		<a class="mix green" href="images/H_BAR.jpg" data-lightbox="gallery" data-title="A Singapore Sling at the Raffles Hotel - Singapore">
 			<img class="mix green" src="images/thumbs/H_BAR_SM.jpg" alt="A Singapore Sling drink">
 			</a>
     	<a class= "mix green" href="images/W_SFBAY.jpg" data-lightbox="gallery" data-title="San Francisco Bay and the incomparable Golden Gate Bridge"> 
