--- a/lightbox-assignment.html
+++ b/lightbox-assignment.html
@@ -18,7 +18,7 @@
       <button type="button" class="control" data-toggle=".orange">MICHIGAN</button>
       <button type="button" class="control" data-toggle=".blue">MISC</button>
     </div>
-
+<!-- Gallery of photos with sort & alt data text -->
 <br>
 	<div class="gallery container">
 		<a class= "mix red" href="images/H_NEEDLE.jpg" data-lightbox="gallery" data-title="Needlepoint on the train">
@@ -55,8 +55,7 @@
 <script src="js/mixitup.min.js"></script>
   <script>
     var containerEl = document.querySelector('.container');
-
-    var mixer = mixitup(containerEl);
+        var mixer = mixitup(containerEl);
   </script>
 </body>
 </html>
